# expect-rs

./: .rustfmt.toml  Cargo.toml  README.md
examples/: random.rs  sh.rs
src/: client.rs  core.rs  lib.rs  pty.rs
src/core/: client.rs  errors.rs  eventloop.rs  match_request.rs  mod.rs  pty.rs  session.rs
