[package]
name = "expect"
version = "0.1.0"
authors = ["Corentin Henry <corentinhenry@gmail.com>"]

[dependencies]
futures = "0.1.18"
libc = "0.2.36"
log = "0.4.1"
mio = "0.6.12"
regex = "0.2.5"
tokio-core = "0.1.12"
tokio-io = "0.1.4"
tokio-proto = "0.1.1"
tty = "0.5.0"

[dev-dependencies]
env_logger = "0.5.3"
